# brezhoneg-validation

./: .gitignore  PRD.md  README.md  pyproject.toml  roadmap_poc.md
.agent/workflows/: commit.md  review.md
backend/: requirements.txt
backend/app/: database.py  main.py  models.py
data/: arbres-kenstur.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
scripts/: import_corpus.py
